add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -108,7 +108,14 @@
 			function handleBoxClick() {
 				positionX = 0;
 				points++;
-				speed = speed + 2;
+				
+				
+			if (speed > 0) {
+				speed = speed + 3
+			}
+			else if (speed < 0) {
+				speed = speed - 3
+			}
 
 				changeBoxText(points);
 			};
