--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                     <li class="nav-li">
                         <a href="portfolio.html"> Portfolio </a>
                     </li>
+                    <li class="nav-li">
+                        <a href="projects/taco-shop/index.html"> Taco Stand </a>
+                    </li>
                 </ul>                   
             </nav>
 
