--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,9 @@
                 <li class="nav-li">
                   <a class="nav-a" href="portfolio.html">Portfolio</a>
                 </li>
+                <li class="nav-li">
+                    <a class="nav-a" href="projects/stimulations/taco-shop/index.html">Taco Shop</a>
+                  </li>
             </ul>
         </nav>
         <main>
